syntax = "proto3";

option csharp_namespace = "Trains.Contracts.Grpc.Impl.Trains";

service TrainsMicroservice {
  rpc GetTrain (GetTrainRequest) returns (GetTrainResponse);
}

message GetTrainRequest {
  string Id = 1;
}

message GetTrainResponse {
  bool Succes = 1;
  oneof Result {
    Train Train = 2;
    Error Error = 3;
  }
}

message Train {
  string Id = 1;
  string ExternalIdentifier = 2;
  TrainParameters Parameters = 3;
}

message TrainParameters {
  int32 NumberOfWagons = 1;
  int32 GrossWeight = 2;
  int32 NetWeight = 3;
  int32 Length = 4;
}

message Error {
  string Message = 1;
  optional string AdditionalDetails = 2;
}